--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
   <div class="intro" id="intro">
-    <h1>Joon Lee</h1>
-    <p>Software QA Engineer with extensive experience and programming chops</p>
+  	<div class="introBlock">
+	    <h1>Joon Lee</h1>
+	    <p>Software QA Engineer with extensive experience and programming chops</p>
+	</div>
   </div>  
   <section class="jumbotron">
 	  <h1 id="heading">Work Experience</h1>
