--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
   <section class="jumbotron">
 	  <h1 id="heading">Work Experience</h1>
 	  <div class="container career">
+	  	<div class="row text-left">
+			<div class="col-sm-1"></div>
+			<a href="https://www.facebook.com/" target="_blank"><img class="worklogo col-sm-2" alt="Facebook" src="./picture/facebook256.png" /></a>
+			<div class="col-sm-7 text-left workdescription">
+				<div class="row work">
+			  		<h3 class="companyname"><a href="https://www.facebook.com/" target="_blank">Facebook</a></h3>
+			  		<h3 class="location">New York, NY</h3>
+			  	</div>
+			  	<div class="row work">
+			  		<h4 class="title">Quality Assurance Analyst II</h4> 	
+			  		<h4 class="duration">Apr 2018 - Current</h4>
+			  	</div>
+			  	<div class="row work">
+					<p id="workP">Run manual and ad-hoc test on iOS and Android apps for Local Dicovery product.  Work with PM, ENG, EM to report weekly QA udpates and serve as a mini-lead in NY to be the channel between 3rd party test team in India and QA managers in SF.  Developed and executed software test plans, cases, scenarios, for each new feature and assign to testers of overseas.</p>
+		  		</div>
+		  		<div class="workEnd">
+		  		</div>
+		  	</div>
+	  		<div class="col"></div>
+	  	</div>
 		<div class="row text-left">
 			<div class="col-sm-1"></div>
 			<a href="http://www.htc.com/us/" target="_blank"><img class="worklogo col-sm-2" alt="HTC" src="./picture/HTC256.jpg" /></a>
