--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="col-sm-7 text-left workdescription">
 				<div class="row work">
 			  		<h3 class="companyname"><a href="https://www.facebook.com/" target="_blank">Facebook</a></h3>
-			  		<h3 class="location">New York, NY</h3>
+			  		<h3 class="location htclocation">New York, NY</h3>
 			  	</div>
 			  	<div class="row work">
 			  		<h4 class="title">Quality Assurance Analyst II</h4> 	
