--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 			<a href="http://www.lg.com/us/mobile" target="_blank"><img class="worklogo col-sm-2" alt="LG Electronics" src="./picture/LG256.jpg" /></a>
 			<div class="col-sm-7 text-left workdescription">
 				<div class="row work">
-			  		<h3 class="companyname"><a href="http://www.lg.com/us/mobile" target="_blank">LG Electronics MobileComm</a></h3>
-			  		<h3 class="location">Morristown, NJ</h3>
+			  		<h3 class="companyname"><a href="http://www.lg.com/us/mobile" target="_blank">LG Electronics</a></h3>
+			  		<h3 class="location htclocation">Morristown, NJ</h3>
 			  	</div>
 			  	<div class="row work">
 			  		<h4 class="title">Software Verification Engineer</h4> 	
@@ -98,7 +98,7 @@
 		  		</div>
 		  		<div class="row work">
 		  			<h4 class="title">B.S. in Industrial Engineering</h4>
-		  			<h4 class="duration">Graduated May, 2007</h4>
+		  			<h4 class="duration">May, 2007</h4>
 		  		</div>
 		  		<div class="row work">
 		  			<p id="workP">NJIT presented opportunities to develop knowledge of mathematics, science and engineering.  Years of phenomenal professors taught me the broad education necessary to understand the impact of engineering solutions in a global, economic, environmental and societal context.  My experience serving as student president in KCCC across 10 campuses in NY metropolitan area strengthened my leadership skills, and expanded my comfort zone.</p>
