--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <title>I'm Joon Lee</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Software Quality Assurance Engineer Joon Lee's Personal Portfolio Website">
+  <meta name="keywords" content="software, QA, Quality Assurance, Joon Lee, Joon Y. Lee, portfolio">
+  <meta name="author" content="Joon Lee">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=EB+Garamond:600,700|Quattrocento+Sans" rel="stylesheet">
