--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
   <section class="jumbotron">
 	  <h1 id="heading">Work Experience</h1>
 	  <div class="container career">
+		  <div class="row text-left">
+			<div class="col-sm-1"></div>
+			<a href="https://www.apple.com/" target="_blank"><img class="worklogo col-sm-2" alt="Apple" src="./picture/apple.png" /></a>
+			<div class="col-sm-7 text-left workdescription">
+				<div class="row work">
+			  		<h3 class="companyname"><a href="https://www.apple.com/" target="_blank">Apple</a></h3>
+			  		<h3 class="location htclocation">Cupertino, CA</h3>
+			  	</div>
+			  	<div class="row work">
+			  		<h4 class="title">Senior Quality Assurance Engineer</h4> 	
+			  		<h4 class="duration">Jan 2019 - Current</h4>
+			  	</div>
+			  	<div class="row work">
+					<p id="workP">driving end-to-end quality across iOS and macOS apps including News, Stocks, Weather, and iAd; partnered with engineering to streamline bug triage and resolution, managed QA task assignments, validated builds, and uncovered critical defects that improved stability, user experience, and revenue.</p>
+		  		</div>
+		  		<div class="workEnd">
+		  		</div>
+		  	</div>
+	  		<div class="col"></div>
+	  	</div>
 	  	<div class="row text-left">
 			<div class="col-sm-1"></div>
 			<a href="https://www.facebook.com/" target="_blank"><img class="worklogo col-sm-2" alt="Facebook" src="./picture/facebook256.png" /></a>
@@ -42,7 +62,7 @@
 			  	</div>
 			  	<div class="row work">
 			  		<h4 class="title">Quality Assurance Analyst II</h4> 	
-			  		<h4 class="duration">Apr 2018 - Current</h4>
+			  		<h4 class="duration">Apr 2018 - Jan 2019</h4>
 			  	</div>
 			  	<div class="row work">
 					<p id="workP">Run manual and ad-hoc test on iOS and Android apps for Local Dicovery product.  Work with PM, ENG, EM to report weekly QA udpates and serve as a mini-lead in NY to be the channel between 3rd party test team in India and QA managers in SF.  Developed and executed software test plans, cases, scenarios, for each new feature and assign to testers of overseas.</p>
@@ -203,4 +223,5 @@
   </footer>
 <script src='main.js'></script> 
 </body>
+
 </html>
