--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			  		<h4 class="duration">Jan 2019 - Current</h4>
 			  	</div>
 			  	<div class="row work">
-					<p id="workP">driving end-to-end quality across iOS and macOS apps including News, Stocks, Weather, and iAd; partnered with engineering to streamline bug triage and resolution, managed QA task assignments, validated builds, and uncovered critical defects that improved stability, user experience, and revenue.</p>
+					<p id="workP">Driving end-to-end quality across iOS and macOS apps including News, Stocks, Weather, and iAd; partnered with engineering to streamline bug triage and resolution, managed QA task assignments, validated builds, and uncovered critical defects that improved stability, user experience, and revenue.</p>
 		  		</div>
 		  		<div class="workEnd">
 		  		</div>
@@ -225,3 +225,4 @@
 </body>
 
 </html>
+
